fixing stupid menu alignment
other minor css fixes
dear god what a travesty I have created

--- a/style.css
+++ b/style.css
@@ -406,6 +406,7 @@ front page
 	margin-left:20px;
 	color:#fff;
 	padding:5px;
+	margin-right: 20px;
 }
 
 h2.this-week {
@@ -487,6 +488,28 @@ img.rva {
 	
 }
 
+@media(min-width: 1200px) {
+	.balance {
+		width:1170px;
+		margin-right: auto;
+		margin-left: auto;
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+}
+
+@media(max-width: 992px) {
+	.balance {
+		width:970px;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	
+	.front-event-title, .front-event-title a{
+		text-align: center;
+	}
+
+}
 
 /*
 event calendar specific
